--- a/css/Custom/custom.css
+++ b/css/Custom/custom.css
@@ -28,6 +28,18 @@ div.banner{
 	overflow:hidden;
 }
 
+div.container a div.instrument-category{
+	min-height:100px;
+	border:solid 2px #09F;
+	border-radius:10px;
+	margin-bottom:15px;
+}
+
+div.container a div.instrument-category h3{
+	margin:10px;
+	color:#666;
+}
+
 div.footer{
 	background-color:#069;
 	min-height:100px;
